// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports (default tab) 1`] = `
{
  "lines": 483,
  "sha256": "030dc0e1f2b5cb0228692a85ceeca82112f74b220c1a0e2e7b2f15df82fe2a75",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports ?tab=aging 1`] = `
{
  "lines": 394,
  "sha256": "c7b4a0018acd5c492cc61fd14e9cc21b6d498dfbca148b1a9e865707f0695ef8",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports ?tab=aging with three issued invoices (the aging rows drawn) 1`] = `
{
  "lines": 549,
  "sha256": "edae813aa771535dcccf4d459d399e74a2d6fd9ff2ea134f3acdd100ab703575",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports default tab with three issued invoices (billed figures on the WIP rows) 1`] = `
{
  "lines": 483,
  "sha256": "cd06cb3a687fc977b46d483ca5bf5619783cd76fb220f2ac79adda8c0144c401",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports: Profit pressed 1`] = `
{
  "lines": 427,
  "sha256": "3f244dc4db41189dabb17b134605d13a2bc830ea56772fce19c8a990cac6bf11",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) wip-report (drill sheet + period picker mounted) 1`] = `
{
  "lines": 696,
  "sha256": "7531e3cd06bf86dbf6534c1c57e0e08b897adfa2eb9e0c6fee3633a8125e940c",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) wip-report: the first project row pressed (the drill sheet drawn) 1`] = `
{
  "lines": 783,
  "sha256": "7603d076a83d14869554cd0749167e64e8853bd2e240dae95b8287ebe38a80d5",
}
`;
